--- a/sass/style.css
+++ b/sass/style.css
@@ -31,18 +31,19 @@ label {
 
 input,
 textarea {
-  color: #b49595;
+  background-color: inherit;
+  color: #070101;
   border: none;
   outline: none;
   border-bottom: 2px solid white;
   padding-bottom: 10px;
 }
 
-/*input:focus,
+input:focus,
 textarea:focus {
-    background-color: inherit;
+  background-color: inherit;
 }
-*/
+
 textarea {
   resize: none;
 }
@@ -77,7 +78,6 @@ main::before {
 }
 
 main {
-  z-index: -1;
   padding-bottom: 100px;
   background-color: inherit;
   padding-bottom: 0;
@@ -116,6 +116,10 @@ main .heroDescriptionMore {
 
 section.primary {
   padding-bottom: 0;
+}
+
+footer {
+  position: relative;
 }
 
 @media screen and (min-width: 768px) {
